--- a/src/Chess.GUI/MainWindow.axaml
+++ b/src/Chess.GUI/MainWindow.axaml
@@ -49,8 +49,8 @@
                 <MenuItem Header="Edit">
                     <MenuItem Header="Preferences">
                         <MenuItem Header="Change Tile Colours"/>
-                        <MenuItem Header="Flip Board"/>
-                        <MenuItem Header="Highlight Legal Moves"/>
+                        <MenuItem Header="Flip Board" x:Name="FlipBoardMenuItem" Click="FlipBoardMenuItem_OnClick"/>
+                        <MenuItem Header="Highlight Legal Moves" x:Name="HighlightLegalMovesMenuItem" Click="HighlightLegalMovesMenuItem_OnClick"/>
                     </MenuItem>
                     <Separator/>
                     <MenuItem Header="Configure AI settings"/>
