--- a/src/Chess.GUI/MainWindow.axaml
+++ b/src/Chess.GUI/MainWindow.axaml
@@ -66,6 +66,9 @@
                     </MenuItem.Header>
                 </MenuItem>
             </Menu>
+            <!-- The captured pieces panel will be docked left -->
+            <gui:CapturedPiecesPanel DockPanel.Dock="Left"></gui:CapturedPiecesPanel>
+            
             <!-- A general box to keep the board in with a margin -->
             <Viewbox Margin="20">
                 <Border BorderThickness="0.1" BorderBrush="Black">
