--- a/src/Chess.GUI/CapturedPiecesPanel.axaml
+++ b/src/Chess.GUI/CapturedPiecesPanel.axaml
@@ -6,48 +6,12 @@
              x:Class="Chess.GUI.CapturedPiecesPanel">
     
     <!-- DockPanel to split white and black captured pieces -->
-    <DockPanel LastChildFill="False">
+    <DockPanel LastChildFill="False" HorizontalAlignment="Center" Margin="10" Width="300" MaxWidth="300">
         
-        <!-- Example grid until pieces are implemented -->
-        <Grid x:Name="TopGrid" DockPanel.Dock="Top" ShowGridLines="True" RowDefinitions="*,*,*,*,*,*,*,*" ColumnDefinitions="*,*"
-              Background="Azure">
-            <Button Grid.Row="0" Grid.Column="0"></Button>
-            <Button Grid.Row="0" Grid.Column="1"></Button>
-            <Button Grid.Row="1" Grid.Column="0"></Button>
-            <Button Grid.Row="1" Grid.Column="1"></Button>
-            <Button Grid.Row="2" Grid.Column="0"></Button>
-            <Button Grid.Row="2" Grid.Column="1"></Button>
-            <Button Grid.Row="3" Grid.Column="0"></Button>
-            <Button Grid.Row="3" Grid.Column="1"></Button>
-            <Button Grid.Row="4" Grid.Column="0"></Button>
-            <Button Grid.Row="4" Grid.Column="1"></Button>
-            <Button Grid.Row="5" Grid.Column="0"></Button>
-            <Button Grid.Row="5" Grid.Column="1"></Button>
-            <Button Grid.Row="6" Grid.Column="0"></Button>
-            <Button Grid.Row="6" Grid.Column="1"></Button>
-            <Button Grid.Row="7" Grid.Column="0"></Button>
-            <Button Grid.Row="7" Grid.Column="1"></Button>
-        </Grid>
-          
-        <!-- Example grid until pieces are implemented -->
-        <Grid x:Name="BottomGrid" DockPanel.Dock="Bottom" ShowGridLines="True" RowDefinitions="*,*,*,*,*,*,*,*" ColumnDefinitions="*,*"
-              Background="CadetBlue">
-            <Button Grid.Row="0" Grid.Column="0"></Button>
-            <Button Grid.Row="0" Grid.Column="1"></Button>
-            <Button Grid.Row="1" Grid.Column="0"></Button>
-            <Button Grid.Row="1" Grid.Column="1"></Button>
-            <Button Grid.Row="2" Grid.Column="0"></Button>
-            <Button Grid.Row="2" Grid.Column="1"></Button>
-            <Button Grid.Row="3" Grid.Column="0"></Button>
-            <Button Grid.Row="3" Grid.Column="1"></Button>
-            <Button Grid.Row="4" Grid.Column="0"></Button>
-            <Button Grid.Row="4" Grid.Column="1"></Button>
-            <Button Grid.Row="5" Grid.Column="0"></Button>
-            <Button Grid.Row="5" Grid.Column="1"></Button>
-            <Button Grid.Row="6" Grid.Column="0"></Button>
-            <Button Grid.Row="6" Grid.Column="1"></Button>
-            <Button Grid.Row="7" Grid.Column="0"></Button>
-            <Button Grid.Row="7" Grid.Column="1"></Button>
-        </Grid>
+        <!-- Top Players Grid of captured pieces -->
+        <UniformGrid x:Name="TopGrid" DockPanel.Dock="Top" Rows="2" Columns="8"/>
+        
+        <!-- Bottom Players Grid of captured pieces -->
+        <UniformGrid x:Name="BottomGrid" DockPanel.Dock="Bottom" Rows="2" Columns="8"/>
     </DockPanel>
 </UserControl>
