Implemented a move log panel that displays SAN positions. Also fixed internal board representation bugs

--- a/src/Chess.GUI/App.axaml
+++ b/src/Chess.GUI/App.axaml
@@ -3,6 +3,8 @@
              x:Class="Chess.GUI.App">
 
     <Application.Styles>
+        <!-- Set dark theme to application -->
         <FluentTheme Mode="Dark"/>
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
     </Application.Styles>
 </Application>
