--- a/src/Chess.GUI/MoveLogView.axaml
+++ b/src/Chess.GUI/MoveLogView.axaml
@@ -12,13 +12,14 @@
     
     <!-- Data grid will output data from bound values -->
     <!-- Bound to the moves collection stored in the view model associated with this class -->
-    <DataGrid AutoGenerateColumns="False" Items="{Binding Moves}" MaxWidth="200"
-              CanUserSortColumns="False" IsReadOnly="True">
+    <DataGrid AutoGenerateColumns="False" Items="{Binding Moves}" Background="#FF333333"
+              CanUserSortColumns="False" IsReadOnly="True" ColumnWidth="*" AlternatingRowBackground="#FF383838" MinWidth="200">
         <!-- Define columns and headers -->
         <!-- Bind values -->
         <DataGrid.Columns>
-            <DataGridTextColumn Header="White" Binding="{Binding WhiteMove}"/>
-            <DataGridTextColumn Header="Black" Binding="{Binding BlackMove}"/>
+            <DataGridTextColumn Header="Move Number" Binding="{Binding MoveNumber}" Width="Auto" CellStyleClasses="moveLogStyle"/>
+            <DataGridTextColumn Header="White" Binding="{Binding WhiteMove}" Width="*" CellStyleClasses="moveLogStyle"/>
+            <DataGridTextColumn Header="Black" Binding="{Binding BlackMove}" Width="*" CellStyleClasses="moveLogStyle"/>
         </DataGrid.Columns>
     </DataGrid>
 </UserControl>
