Implemented AI in GUI

--- a/src/Chess.GUI/Views/MainWindow.axaml
+++ b/src/Chess.GUI/Views/MainWindow.axaml
@@ -34,6 +34,7 @@
                 </Menu.ItemsPanel>
                 <!-- Defines the game menu -->
                 <MenuItem Header="Game">
+                    <!-- Bind New Game MenuItem to the NewGame_OnClick method -->
                     <MenuItem Header="New" InputGesture="Ctrl+N" Click="NewGame_OnClick"/>
                     <MenuItem Header="Load">
                         <MenuItem Header="From FEN"/>
@@ -44,13 +45,16 @@
                         <MenuItem Header="To PGN"/>
                     </MenuItem>
                     <Separator/>
+                    <!-- Bind New Game MenuItem to the QuitMenuItem_OnClick method -->
                     <MenuItem Header="_Exit" Click="QuitMenuItem_OnClick"/>
                 </MenuItem>
                 <!-- Defines the edit menu -->
                 <MenuItem Header="Edit">
                     <MenuItem Header="Preferences">
                         <MenuItem Header="Change Tile Colours"/>
+                        <!-- Bind New Game MenuItem to the FlipBoardMenuItem_OnClick method -->
                         <MenuItem Header="Flip Board" x:Name="FlipBoardMenuItem" Click="FlipBoardMenuItem_OnClick"/>
+                        <!-- Bind New Game MenuItem to the HighlightLegalMovesMenuItem_OnClick method -->
                         <MenuItem Header="Highlight Legal Moves" x:Name="HighlightLegalMovesMenuItem" Click="HighlightLegalMovesMenuItem_OnClick"/>
                     </MenuItem>
                     <Separator/>
