--- a/src/Chess.GUI/Views/MoveLogView.axaml
+++ b/src/Chess.GUI/Views/MoveLogView.axaml
@@ -13,12 +13,12 @@
     
     <!-- Data grid will output data from bound values -->
     <!-- Bound to the moves collection stored in the view model associated with this class -->
-    <DataGrid AutoGenerateColumns="False" Items="{Binding Moves}" Background="#FF333333"
+    <DataGrid x:Name="MoveLogDataGrid" AutoGenerateColumns="False" Items="{Binding Moves}" Background="#FF333333"
               CanUserSortColumns="False" IsReadOnly="True" ColumnWidth="*" AlternatingRowBackground="#FF383838" MinWidth="200">
         <!-- Define columns and headers -->
         <!-- Bind values -->
         <DataGrid.Columns>
-            <DataGridTextColumn Header="Move Number" Binding="{Binding MoveNumber}" Width="Auto" CellStyleClasses="moveLogStyle"/>
+            <DataGridTextColumn Header="Move Number" Binding="{Binding MoveNumber}" Width="*" CellStyleClasses="moveLogStyle"/>
             <DataGridTextColumn Header="White" Binding="{Binding WhiteMove}" Width="*" CellStyleClasses="moveLogStyle"/>
             <DataGridTextColumn Header="Black" Binding="{Binding BlackMove}" Width="*" CellStyleClasses="moveLogStyle"/>
         </DataGrid.Columns>
