--- a/src/Chess.GUI/Views/TileColourPickerWindow.axaml
+++ b/src/Chess.GUI/Views/TileColourPickerWindow.axaml
@@ -8,7 +8,8 @@
 	mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
 	x:Class="Chess.GUI.Views.TileColourPickerWindow"
 	Title="Tile Colour Picker"
-	Width="1200" Height="800">
+	Width="1200" Height="800"
+	WindowStartupLocation="CenterOwner">
 	<Design.DataContext>
 		<vm:TileColourPickerWindowViewModel/>
 	</Design.DataContext>
