--- a/src/Chess.GUI/Views/MoveLogView.axaml
+++ b/src/Chess.GUI/Views/MoveLogView.axaml
@@ -7,19 +7,21 @@
              x:Class="Chess.GUI.Views.MoveLogView">
     <!-- Design time rendering of data (not compiled in application -->
     <Design.DataContext>
-        <vm:MoveLogViewModel/>
+        <vm:MoveLogViewModel />
     </Design.DataContext>
-    
+
     <!-- Data grid will output data from bound values -->
     <!-- Bound to the moves collection stored in the view model associated with this class -->
     <DataGrid x:Name="MoveLogDataGrid" AutoGenerateColumns="False" Items="{Binding Moves}" Background="#FF333333"
-              CanUserSortColumns="False" IsReadOnly="True" ColumnWidth="*" AlternatingRowBackground="#FF383838" MinWidth="200">
+              CanUserSortColumns="False" IsReadOnly="True" ColumnWidth="*" AlternatingRowBackground="#FF383838"
+              MinWidth="200">
         <!-- Define columns and headers -->
         <!-- Bind values -->
         <DataGrid.Columns>
-            <DataGridTextColumn Header="Move Number" Binding="{Binding MoveNumber}" Width="*" CellStyleClasses="moveLogStyle"/>
-            <DataGridTextColumn Header="White" Binding="{Binding WhiteMove}" Width="*" CellStyleClasses="moveLogStyle"/>
-            <DataGridTextColumn Header="Black" Binding="{Binding BlackMove}" Width="*" CellStyleClasses="moveLogStyle"/>
+            <DataGridTextColumn Header="Move Number" Binding="{Binding MoveNumber}" Width="*"
+                                CellStyleClasses="moveLogStyle" />
+            <DataGridTextColumn Header="White" Binding="{Binding WhiteMove}" Width="*" CellStyleClasses="moveLogStyle" />
+            <DataGridTextColumn Header="Black" Binding="{Binding BlackMove}" Width="*" CellStyleClasses="moveLogStyle" />
         </DataGrid.Columns>
     </DataGrid>
 </UserControl>
