--- a/src/Chess.GUI/Views/MoveLogView.axaml
+++ b/src/Chess.GUI/Views/MoveLogView.axaml
@@ -14,7 +14,7 @@
     <!-- Bound to the moves collection stored in the view model associated with this class -->
     <DataGrid x:Name="MoveLogDataGrid" AutoGenerateColumns="False" Items="{Binding Moves}" Background="#FF333333"
               CanUserSortColumns="False" IsReadOnly="True" ColumnWidth="*" AlternatingRowBackground="#FF383838"
-              MinWidth="200" Width="400">
+              MinWidth="200">
         <!-- Define columns and headers -->
         <!-- Bind values -->
         <DataGrid.Columns>
